--- a/client/src/components/dashboard/dashboard.module.css
+++ b/client/src/components/dashboard/dashboard.module.css
@@ -143,7 +143,7 @@
   background-color: #444;
 }
 
-/* Filters Button (MainDashboard sağ üst) */
+/* Filters Button*/
 .filtersWrapper {
   display: flex;
   justify-content: space-between;
@@ -203,7 +203,7 @@
   color: white;
   width: 100%;
   box-sizing: border-box;
-  height: 40px; /* input ve select yüksekliği eşitlendi */
+  height: 40px; 
   font-size: 14px;
 }
 
