--- a/client/src/components/auth/AuthPage.css
+++ b/client/src/components/auth/AuthPage.css
@@ -26,10 +26,35 @@
   position: relative;
 }
 
-.auth-avatar {
-  width: 100px;
-  height: 100px;
+.auth-avatar-main {
+  width: 162px; 
+  height: 162px;
+  object-fit: cover;
   margin-bottom: 24px;
+}
+
+.logo-img {
+  width: 48px; 
+  height: 48px;
+  object-fit: cover;
+}
+
+@media (max-width: 474px) {
+  .auth-avatar-main {
+    width: 124px; 
+    height: 124px;
+  }
+  
+  .logo-img {
+    width: 40px; 
+    height: 40px;
+  }
+  
+  .auth-card {
+    width: 100%;
+    height: auto;
+    padding: 20px;
+  }
 }
 
 .logo-section {
@@ -37,11 +62,6 @@
   align-items: center;
   gap: 12px;
   margin-bottom: 24px;
-}
-
-.logo-img {
-  width: 48px;
-  height: 48px;
 }
 
 .auth-card h1 {
@@ -84,7 +104,6 @@
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-/* Varsayılan stiller */
 .register-btn {
   background-color: #000000;
   color: #ffffff;
@@ -97,7 +116,6 @@
   border: 1px solid #ffffff;
 }
 
-/* Butonlar üzerine gelindiğinde ortak hover stili */
 .register-btn:hover,
 .login-btn:hover {
   background-color: #ffffff;
